# common3d

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  BUGFIXES.md  README.md  expirience.txt  pyproject.toml
.github/workflows/: pre-commit.yaml
config/: co3d_common3d.yaml  co3d_nemo.yaml  co3d_nemo_rec.yaml  defaults.yaml  shapenet_nemo_rec.yaml
config/ablations/co3d_refs/: _default.yaml  r0.yaml  r1.yaml  r2.yaml  r3.yaml  r4.yaml
config/ablations/zsp/: _cross_pascal3d_objectnet3d.yaml
config/credentials/: default-template.yaml
config/datasets/: cifar10.yaml  cifar10_test.yaml  cifar10_train.yaml  co3d.yaml  co3d_matching.yaml  co3d_no_zsp.yaml  co3d_no_zsp_0s_aligned.yaml  co3d_no_zsp_1s_aligned.yaml  co3d_no_zsp_1s_labeled_ref.yaml  co3d_no_zsp_1s_labeled_ref_bckp.yaml  co3d_no_zsp_50s_aligned.yaml  co3d_no_zsp_50s_unlabeled.yaml  co3d_no_zsp_5s_labeled_ref.yaml  co3d_no_zsp_5s_labeled_ref_bic.yaml  co3d_no_zsp_5s_labeled_ref_cuboid.yaml  co3d_no_zsp_5s_labeled_ref_ico1000.yaml  co3d_no_zsp_5s_labeled_ref_ico500.yaml  co3d_no_zsp_5s_labeled_ref_sph500.yaml  co3d_no_zsp_5s_unlabeled_ref.yaml  co3d_no_zsp_aligned_visual.yaml  co3d_no_zsp_bic.yaml  co3d_no_zsp_r0.yaml  co3d_no_zsp_r1.yaml  co3d_no_zsp_r2.yaml  co3d_no_zsp_r3.yaml  co3d_no_zsp_r4.yaml  co3dv1_zsp_10s.yaml  coco_train.yaml  coco_val.yaml  dtd.yaml  imagenet.yaml  keypoints.yaml  monolmb.yaml  monolmb_test.yaml  monolmb_train.yaml  mvimgnet.yaml  objaverse.yaml  objectnet3d.yaml  objectnet3d_debug.yaml  objectnet3d_test.yaml  (+44 more)
config/datasets/categories/: cifar10.yaml  cross.yaml  ood_cv.yaml  pascal3d.yaml  zsp.yaml
config/datasets/co3d_refs/: _default.yaml  r0.yaml  r1.yaml  r2.yaml  r3.yaml  r4.yaml
config/methods/: common3d.yaml  nemo.yaml  nemo_rec.yaml
config/methods/dataloader/: default.yaml
config/methods/dataset/: co3d.yaml  (+2 more)
config/platform/: default.yaml  local-template.yaml  local_lmbraid19.yaml  scratch.yaml  slurm-template.yaml  slurm.yaml  slurm_3080.yaml  slurm_l40.yaml  slurm_local.yaml  slurm_tf.yaml  slurm_tf1080.yaml  slurm_tf2080.yaml  slurm_tf3090.yaml  slurm_tf4090.yaml  slurm_tf_linklocal.yaml  slurm_tf_local.yaml  slurm_tf_omni6dpose.yaml  ssh-config-template  torque-template.yaml
docker/: README.md
docs/contributing/: README.md
docs/coordinate_frames/: README.md
docs/cuda/: README.md
notebooks/: fft_transform2d.yaml.ipynb  generate_tets.ipynb  lbo.ipynb  mesh_pcl_dist.ipynb  objectron.ipynb  sam2.ipynb  test.py  test2.py  visualize.ipynb  visualize.py  visualize_nemo_mesh.ipynb  visualize_nemo_mesh.py
setup/: default.sh  shuri.sh
src/od3d/: io.py
tests/: mesh_geodesic_test.py  mesh_pcl_dist.py  select_test.py
(+462 files in other folders)
